--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,3 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -11,11 +5,11 @@ default: &default
 
 development:
   <<: *default
-  database: your_app_development
+  database: horsesinpocket_development
 
 test:
   <<: *default
-  database: your_app_test
+  database: horsesinpocket_test
 
 production:
   <<: *default
@@ -23,3 +17,5 @@ production:
   username: <%= ENV['DATABASE_USER'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DATABASE_HOST'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
+  sslmode: <%= ENV['DATABASE_SSLMODE'] %>
