--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ test:
 production:
   <<: *default
   database: <%= ENV['DATABASE_NAME'] %>
+  database_URL: <%= ENV['DATABASE_URL'] %>
   username: <%= ENV['DATABASE_USER'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DATABASE_HOST'] %>
