--- a/config/database.yml
+++ b/config/database.yml
@@ -16,5 +16,12 @@ test:
   database: horsesinpocket_test
 
 production:
-  <<: *default
-  url: <%= ENV['DATABASE_URL'] %> # Use DATABASE_URL para simplificar a configuração
+production:
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: horsesinpocket_production
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: 5432
+  sslmode: require
