--- a/config/database.yml
+++ b/config/database.yml
@@ -2,18 +2,22 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  username: postgres
-  password: 2344 # Atualize se necessário
-  host: 127.0.0.1
-  port: 5432
 
 development:
   <<: *default
   database: horsesinpocket_development
+  username: postgres
+  password: 2344
+  host: 127.0.0.1
+  port: 5432
 
 test:
   <<: *default
   database: horsesinpocket_test
+  username: postgres
+  password: 2344
+  host: 127.0.0.1
+  port: 5432
 
 production:
   adapter: postgresql
