--- a/config/database.yml
+++ b/config/database.yml
@@ -23,9 +23,4 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: <%= ENV['DATABASE_NAME'] %>
-  username: <%= ENV['DATABASE_USER'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: <%= ENV['DATABASE_HOST'] %>
-  port: <%= ENV['DATABASE_PORT'] %>
-  sslmode: require
+  url: <%= ENV['DATABASE_URL'] %>
